<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Avrilpedia</string>
    <string name="birthname">Birth Name</string>
    <string name="birthname1">Avril Ramona Lavigne</string>
    <string name="color">Color</string>
    <string name="channel_title">Caution</string>
    <string name="channel_text">This tab loads 5 websites at the same time. So, it may incur extra charges depending on your data plan. I recommend you to connect Wi-Fi</string>
    <string name="exit_message">Press the back key again to close the app</string>
    <string name="back">Back</string>
    <string name="download">Download</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="profile">Profile</string>
    <string name="award">Award</string>
    <string name="award_a">Total Awards won : 220</string>
    <string name="award_b">"You can see Avril Lavigne's awards.\nTouch items to know more.</string>
    <string name="discography">Discography</string>
    <string name="discography_a">"You can see Avril Lavigne's discography.\nTouch items to know more.</string>
    <string name="filmography">Filmography</string>
    <string name="filmography_a">"You can see Avril Lavigne's filmography.\nTouch items to know more.</string>
    <string name="channel">Channel</string>
    <string name="channel_a">"You can watch Avril Lavigne's news all at once here.\nTouch your device's menu button to enjoy better web surfing.</string>
    <string name="letgo">1st Album</string>
    <string name="undermyskin">2nd Album</string>
    <string name="thebestdamnthing">3rd Album</string>
    <string name="goodbyelullaby">4th Album</string>
    <string name="avrillavigne">5th Album</string>
    <string name="filmo_0">Sabrina, the Teenage Witch</string>
    <string name="filmo_1">Going the Distance</string>
    <string name="filmo_2">Fast Food Nation</string>
    <string name="filmo_3">Over the Hedge</string>
    <string name="filmo_4">The Flock</string>
    <string name="filmo_5">American Idol</string>
    <string name="filmo_6" translatable="false">Majors &amp; Minors</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="dateofbirth1">27 September 1984</string>
    <string name="placeofbirth">Place Of Birth</string>
    <string name="placeofbirth1">Belleville, Ontario, Canada</string>
    <string name="genres">Genres</string>
    <string name="genres1">Pop punk, pop rock, alternative rock</string>
    <string name="occupations">Occupations</string>
    <string name="occupations1">Singer-songwriter, musician, fashion designer</string>
    <string name="instruments">Instruments</string>
    <string name="instruments1">Vocals, guitar, piano, drums</string>
    <string name="yearsactive">Years Active</string>
    <string name="yearsactive1">1999 ~ Present</string>
    <string name="labels">Labels</string>
    <string name="labels1">Epic Records</string>
    <string name="setwallpaper">Set Wallpaper</string>
    <string name="toastwallpaper">Wallpaper has changed</string>
    <string name="license">License</string>
    <string name="changelog">Changelog</string>
    <string name="close">Close</string>
    <string name="version">Application Version</string>
    <string name="theme">Theme</string>
    <string name="setting">Settings</string>
    <string name="wall_title">Notice</string>    
    <string name="wall_text">This function supports only hdpi, xhdpi, xxhdpi phones. So, there may be image size errors on some phones. I will support other screen resolutions later.</string>
    <string name="sns_error">Please check your Internet connection!</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="wall_temp">Sorry, You cannot use this tab. Please wait for the next update!</string>
    <string name="support">Support</string>
</resources>